<resources>
    <string name="app_name">TALA</string>
    <string name="approved_header">Your Application is Approved!</string>
    <string name="approved_sub_header">You have been approved for %1$s %2$d.</string>
    <string name="approved_button_text">View Loan Offer</string>

    <string name="paid_header">Your loan is fully paid.</string>
    <string name="paid_sub_header">Apply for another loan any time you want and grow your limit.</string>
    <string name="apply_now">Apply Now</string>
    <string name="make_a_payment">Make A Payment</string>
    <string name="how_to_repay">How to repay</string>
    <string name="you_are_on_track">You are on track!</string>
    <string name="due_amount">%1$s %2$d</string>
    <string name="apply_for_a_loan">Apply for a Loan</string>
    <string name="repay_on_time_to_get_loan_ups_to_30_000">Repay on Time to get loan ups to %2$d</string>
    <string name="using_arguments_we_can_show_details_here">Using Arguments we can show details here</string>
</resources>